--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,8 @@ path = "src/bin/server.rs"
 [dependencies]
 async-stream = "0.3.0"
 atoi = "2.0.0"
-bytes = "1"
+redis-protocol = "0.7"
+bytes = "1.1"
 clap = { version = "4.2.7", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
 tokio-stream = "0.1"
